# PocketMind

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.txt
app/src/main/java/com/localai/chatbot/: MainActivity.kt
app/src/main/res/values/: themes.xml
core/: build.gradle.kts
core/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
core/src/main/java/com/localai/chatbot/ai/: LlamaEngine.kt
core/src/main/java/com/localai/chatbot/data/: ChatRepository.kt  ModelDownloader.kt
core/src/main/java/com/localai/chatbot/database/: ChatDao.kt  ChatDatabase.kt  ChatEntity.kt  MemoryDao.kt  MemoryEntity.kt  MessageDao.kt  MessageEntity.kt
core/src/main/java/com/localai/chatbot/llmnative/: LlamaNative.kt
core/src/main/java/com/localai/chatbot/memory/: MemoryExtractor.kt  MemoryManager.kt
core/src/main/java/com/localai/chatbot/models/: Chat.kt  Message.kt  ModelInfo.kt
core/src/main/java/com/localai/chatbot/prompt/: PromptBuilder.kt  UserMemory.kt
release/: app-release.apk
ui/: build.gradle.kts
ui/src/main/java/com/localai/chatbot/ui/: ChatScreen.kt
ui/src/main/java/com/localai/chatbot/ui/theme/: Color.kt  Theme.kt
viewmodel/: build.gradle.kts
viewmodel/src/main/java/com/localai/chatbot/viewmodel/: ChatViewModel.kt  ChatViewModelFactory.kt  LocalAnswerer.kt
